# shijim

./: .gitignore  ARCHITECTURE_PERF.md  BDD_SPEC.md  Dockerfile  FEATURES.md  Makefile  PROJECT.md  README.md  docker-compose.yml  docker-compose.yml.bak  docker-compose.yml.codex  main.py  pyproject.toml  requirements.txt  verify_pool.py  verify_reliability.py
.github/workflows/: main.yml  pause_cloud.yml  start_cloud.yml
raw/2025-11-19/symbol=TXFL5/: md_events_0001.jsonl
raw/2025-11-20/symbol=0050/: md_events_0001.jsonl
raw/2025-11-20/symbol=2330/: md_events_0001.jsonl
raw/2025-11-20/symbol=TXFL5/: md_events_0001.jsonl
raw/2025-11-21/symbol=0050/: md_events_0001.jsonl
raw/2025-11-21/symbol=2330/: md_events_0001.jsonl
raw/2025-11-21/symbol=TXFL5/: md_events_0001.jsonl
raw_smoke/2025-11-19/symbol=TXFL5/: md_events_0001.jsonl
rust_core/: Cargo.toml
rust_core/features/: ipc_ring_buffer_writer.feature
rust_core/src/ipc/: ring_buffer.rs
rust_core/tests/: ipc_ring_buffer_writer_tests.rs
shijim/: __init__.py  cli.py  runner.py
shijim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
shijim/algo/: __init__.py  microstructure.py
shijim/algo/execution/: __init__.py  piq.py
shijim/algo/features/: __init__.py  l5.py
shijim/backtest/: __init__.py  adapter.py  converter.py
shijim/bus/: __init__.py  event_bus.py  publisher.py  subscriber.py
shijim/dashboard/: __init__.py  app.py  grafana_dashboard.json
shijim/events/: __init__.py  normalizers.py  schema.py
shijim/execution/: order_manager.py
shijim/features/: hawkes.py  ofi.py  vpin.py
shijim/gateway/: __init__.py  callbacks.py  context.py  filter.py  ingestion.py  navigator.py  pool.py  replay.py  session.py  sharding.py  shioaji_adapter.py  subscriptions.py  universe.py
shijim/governance/: __init__.py  audit.py  replay.py  report.py
shijim/ipc/: __init__.py  ring_buffer.py
shijim/monitoring/: __init__.py  observers.py
shijim/recorder/: __init__.py  clickhouse_writer.py  gap_replayer.py  ingestion.py  rate_limit.py  raw_writer.py
shijim/risk/: __init__.py  guards.py  manager.py
shijim/sbe/: __init__.py  decoder.py
shijim/strategy/: __init__.py  engine.py  micro_alpha.py  ofi.py
shijim/tools/: debug_universe.py  hft_converter.py  live_smoke_test.py  restore_failed_batches.py  test_scanners.py
shijim_core/: Cargo.toml
shijim_core/src/: ingestion.rs  lib.rs  sbe.rs
shijim_indicators/: Cargo.toml  pyproject.toml
shijim_indicators/benches/: indicators_benchmark.rs
shijim_indicators/src/: lib.rs
shijim_indicators/src/metrics/: hawkes.rs  mod.rs  ofi.rs  vpin.rs
tests/: test_cli.py  test_context_callbacks.py  test_gap_replayer.py  test_gap_replayer_enhanced.py  test_recorder_pipeline.py  test_session.py
tests/algo/: test_l5_features.py  test_microstructure.py  test_piq.py
tests/backtest/: test_hft_adapter.py
tests/benchmarks/: test_indicators_benchmark.py
tests/bus/: test_event_bus_features.py  test_event_bus_semantics.py
tests/dashboard/: test_dashboard.py
tests/e2e/: test_full_pipeline.py
tests/events/: test_normalizers.py
tests/execution/: test_order_manager.py
tests/features/: backtest_integration.feature  dashboard_monitoring.feature  e2e_system_validation.feature  ipc_integration.feature  ipc_ring_buffer_reader.feature  pre_trade_risk.feature  sbe_market_data_decoder.feature  shioaji_ingestion.feature  signal_ofi_calculation.feature  smart_chasing_execution.feature  strategy_runner_integration.feature  test_integrated_features.py  test_ofi_feature.py  test_rust_hawkes.py  test_rust_ofi.py  test_rust_vpin.py
tests/gateway/: test_callbacks.py  test_context_features.py  test_ingestion.py  test_replay.py  test_session.py  test_shioaji_adapter.py  test_subscriptions.py  test_universe_listed.py  test_universe_navigator.py  test_universe_sharding.py
tests/governance/: test_audit.py  test_report.py
tests/integration/: test_cli_wiring.py  test_strategy_runner.py
tests/ipc/: test_integration.py  test_integration_sbe.py  test_ring_buffer.py
tests/monitoring/: test_observers.py
tests/recorder/: test_clickhouse_writer.py  test_clickhouse_writer_fallback.py  test_clickhouse_writer_reliability.py  test_ingestion.py  test_ingestion_metrics.py  test_ingestion_perf.py  test_raw_writer.py  test_recorder_ingestion.py
tests/risk/: test_risk_management.py  test_risk_manager.py
tests/sbe/: test_sbe_decoder.py
tests/smoke/: test_live_smoke_entrypoint.py
tests/strategy/: test_micro_alpha.py  test_ofi.py  test_smart_chasing_engine.py
tests/tools/: test_hft_converter.py  test_restore_failed_batches.py
tools/: multicast_sender.py
