[project]
name = "shijim"
version = "0.2.0"
description = "Shioaji-based market data ingestion, data governance, and converter toolkit."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "shioaji>=1.1.0",
    "pyzmq>=26.0.0",
    "polars>=1.6.0",
    "orjson>=3.10.0",
    "numpy>=2.0.0",
]

[project.optional-dependencies]
clickhouse = [
    "clickhouse-driver>=0.2.6",
]
dev = [
    "pytest>=7.4",
    "flake8>=6.1",
]

[project.urls]
Homepage = "https://github.com/your-org/shijim"
Documentation = "https://github.com/your-org/shijim"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
