[package]
name = "shijim_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "shijim_core"
crate-type = ["cdylib"]

[dependencies]
memmap2 = "0.9"
pyo3 = { version = "0.20", features = ["extension-module"] }
crossbeam-utils = "0.8"
thiserror = "1.0"
libc = "0.2" # Needed for shm_open/ftruncate on Linux
socket2 = "0.6.1"
