[package]
name = "shijim_indicators"
version = "0.1.0"
edition = "2021"

[lib]
name = "shijim_indicators"
crate-type = ["cdylib", "rlib"]


[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
numpy = { version = "0.20.0" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "indicators_benchmark"
harness = false
